@@ -5,9 +5,6 @@ license = Perl_5
 copyright_holder = foobar
 copyright_year   = 2009
 
-[GatherDir]
-[InsertCopyright]
-
 [Encoding]
 encoding = Latin-1
 filename = example/latin1
@@ -15,3 +12,7 @@ filename = example/latin1
 [Encoding / Bytes]
 encoding = bytes
 filename = t/binary.dat
+
+[GatherDir]
+[ExecDir]
+[InsertCopyright]
